Ajuste de logo  en CSS

--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/aplogo/aplogo.component.html
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/aplogo/aplogo.component.html
@@ -1,2 +1,2 @@
 <p>aplogo works!</p>
-<img src="..//..//..//assets/APLogo.png" alt="">
+<img src="ProyectoIntegradorArgProg_SenecaGabriel\src\assets\APLogo.png" id="APlogo">
