Ajustes Logo en Header

--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/aplogo/aplogo.component.html
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/aplogo/aplogo.component.html
@@ -1,2 +1,2 @@
-<p>aplogo works!</p>
-<img src="ProyectoIntegradorArgProg_SenecaGabriel\src\assets\APLogo.png" id="APlogo">
+
+<img src="..//..//..//app/..//assets/APLogo.png" id="APlogo">
