--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/app.component.html
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/app.component.html
@@ -305,7 +305,9 @@
   }
 </style>
 
-<!-- Toolbar -->
+
+
+ Toolbar 
 <div class="toolbar" role="banner">
   <img
     width="40"
@@ -330,7 +332,7 @@
 
 <div class="content" role="main">
 
-  <!-- Highlight Card -->
+   Highlight Card 
   <div class="card highlight-card card-small">
 
     <svg id="rocket" xmlns="http://www.w3.org/2000/svg" width="101.678" height="101.678" viewBox="0 0 101.678 101.678">
@@ -353,7 +355,7 @@
 
   </div>
 
-  <!-- Resources -->
+   Resources 
   <h2>Resources</h2>
   <p>Here are some links to help you get started:</p>
 
@@ -389,7 +391,7 @@
 
   </div>
 
-  <!-- Next Steps -->
+   Next Steps 
   <h2>Next Steps</h2>
   <p>What do you want to do next with your app?</p>
 
@@ -427,7 +429,7 @@
     </button>
   </div>
 
-  <!-- Terminal -->
+   Terminal 
   <div class="terminal" [ngSwitch]="selection.value">
       <pre *ngSwitchDefault>ng generate component xyz</pre>
       <pre *ngSwitchCase="'material'">ng add @angular/material</pre>
@@ -437,7 +439,7 @@
       <pre *ngSwitchCase="'build'">ng build</pre>
   </div>
 
-  <!-- Links -->
+  Links 
   <div class="card-container">
     <a class="circle-link" title="Find a Local Meetup" href="https://www.meetup.com/find/?keywords=angular" target="_blank" rel="noopener">
       <svg xmlns="http://www.w3.org/2000/svg" width="24.607" height="23.447" viewBox="0 0 24.607 23.447">
@@ -455,7 +457,7 @@
     </a>
   </div>
 
-  <!-- Footer -->
+   Footer 
   <footer>
       Love Angular?&nbsp;
       <a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Give our repo a star.
@@ -475,7 +477,9 @@
   </svg>
 
 </div>
+
 -->
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
