--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/header/header.component.css
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/header/header.component.css
@@ -1,6 +1,9 @@
 div{
     background-color: rgb(0, 183, 255);
-    height: auto;
-    width: auto;
-    
+  
+}
+app-social{
+    float: right;
+    margin-top: 25px;
+
 }
