--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/acerca-de/acerca-de.component.html
@@ -1,1 +1,16 @@
-<p>acerca-de works!</p>
+<div class="row">
+    <div class="col-xs-12 col-sm-2 col-m-2 col-lg-2">
+        <img src="../../../assets/ghscv.jpg"
+        class="img-fluid">
+    </div>
+    <div class="col-xs-12 col-sm-2 col-m-2 col-lg-2">
+        <p>Séneca, Gabriel Hernán</p>
+        <p>Full Stack Developer Jr.</p>
+    <div class="col-xs-12 col-sm-8 col-m-8 col-lg-8">
+        <span>
+            <h1>Acerca de mí:</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam maiores quia architecto dicta a pariatur temporibus ex accusantium ut, culpa alias consequuntur in, eaque inventore delectus blanditiis placeat nobis repellendus.
+            </p>
+        </span>
+    </div>   
+</div>>
