--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/acerca-de/acerca-de.component.html
@@ -6,6 +6,7 @@
     <div class="col-xs-12 col-sm-2 col-m-2 col-lg-2">
         <p>Séneca, Gabriel Hernán</p>
         <p>Full Stack Developer Jr.</p>
+    </div>
     <div class="col-xs-12 col-sm-8 col-m-8 col-lg-8">
         <span>
             <h1>Acerca de mí:</h1>
