--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/banner/banner.component.html
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/banner/banner.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Argentina Programa #Yo Programo</h2>
+    <h2> #Yo Programo / Porfolio</h2>
     <img src="../../../assets/banner.jpg" alt="">
     
 </div>>
