--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/acerca-de/acerca-de.component.css
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/acerca-de/acerca-de.component.css
@@ -1,8 +1,46 @@
-.row {
-    padding: 20px;
+.row{
+    padding: 10px;
 }
+
 app-acerca-de{
     float: right;
-    margin-top: 25px;
+    margin-top: 20px;
 
+}
+
+div{
+    background-color: rgb(0, 183, 255);
+    text-align: center;
+}
+
+/* estilo foto perfil*/
+@media (min-width: 576px){
+    #fotoperfil{
+        position: absolute;
+        width: 15%;
+        border-radius: 100%;
+        box-shadow: 3px 3px 3px grey;
+        left: 3%;
+        top:400px;
+    }
+}
+@media (max-width: 576px){
+    #fotoperfil{
+        position: absolute;
+        width: 30%;
+        border-radius: 100%;
+        box-shadow: 3px 3px 3px grey;
+        left: 33%;
+        top:430px;
+    }
+}
+
+/*etiqueta nombre*/
+#nombre{
+    font-weight: bold;
+    margin-top: 20%;
+    font-size: 25px;
+}
+#puesto{
+    font-style: italic;
 }
