--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/acerca-de/acerca-de.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col-xs-12 col-sm-2 col-m-2 col-lg-2">
         <img src="../../../assets/ghscv.jpg"
-        class="img-fluid">
+        class="img-fluid" id="fotoperfil">
     </div>
     <div class="col-xs-12 col-sm-2 col-m-2 col-lg-2">
-        <p>Séneca, Gabriel Hernán</p>
-        <p>Full Stack Developer Jr.</p>
+        <p id="nombre">Séneca, Gabriel Hernán</p>
+        <p id="puesto">Full Stack Developer Jr.</p>
     </div>
     <div class="col-xs-12 col-sm-8 col-m-8 col-lg-8">
         <span>
