--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/educacion/educacion.component.html
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/educacion/educacion.component.html
@@ -1,24 +1,25 @@
 <div class="row">
-    <h1>Experiencia laboral</h1>
+    <h1>Educación</h1>
     <div class="col-lg-1"></div>
     <div class="col-lg-11">
         <ul>
             <li>
-                <h1>Trabajo 1</h1> - 
+                <h1>Educación 1</h1> - 
                 <h3>(years)</h3></li>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quidem debitis similique labore impedit repellendus obcaecati illum dolorem, ea nulla voluptatem error in aliquam omnis inventore a qui assumenda beatae.</p>
         </ul>
         <ul>
             <li>
-                <h1>Trabajo 2</h1> - 
+                <h1>Educación 2</h1> - 
                 <h3>(years)</h3></li>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quidem debitis similique labore impedit repellendus obcaecati illum dolorem, ea nulla voluptatem error in aliquam omnis inventore a qui assumenda beatae.</p>
         </ul>
         <ul>
             <li>
-                <h1>Trabajo 3</h1> - 
+                <h1>Educación 3</h1> - 
                 <h3>(years)</h3></li>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quidem debitis similique labore impedit repellendus obcaecati illum dolorem, ea nulla voluptatem error in aliquam omnis inventore a qui assumenda beatae.</p>
         </ul>
     </div>
 </div>>
+
