--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/banner/banner.component.css
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/banner/banner.component.css
@@ -1,8 +1,11 @@
 img{
     width: 100%;
     height: 300px;
-    padding: 10px;
+    padding: 0px;
 }
 div{
+    padding: 0px;
+}
+h2{
     padding: 10px;
 }
