--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/educacion/educacion.component.html
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/educacion/educacion.component.html
@@ -21,5 +21,5 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quidem debitis similique labore impedit repellendus obcaecati illum dolorem, ea nulla voluptatem error in aliquam omnis inventore a qui assumenda beatae.</p>
         </ul>
     </div>
-</div>>
+</div>
 
