--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/acerca-de/acerca-de.component.css
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/acerca-de/acerca-de.component.css
@@ -14,24 +14,24 @@ div{
 }
 
 /* estilo foto perfil*/
-@media (min-width: 576px){
+@media (min-width: 800px){
     #fotoperfil{
         position: absolute;
-        width: 15%;
+        width: 13%;
         border-radius: 100%;
-        box-shadow: 3px 3px 3px grey;
+        box-shadow: 3px 3px 3px rgb(255, 255, 255);
         left: 3%;
-        top:400px;
+        top:370px;
     }
 }
-@media (max-width: 576px){
+@media (max-width: 800px){
     #fotoperfil{
         position: absolute;
         width: 30%;
         border-radius: 100%;
-        box-shadow: 3px 3px 3px grey;
-        left: 33%;
-        top:430px;
+        box-shadow: 3px 3px 3px rgb(255, 255, 255);
+        left: 30%;
+        top:275px;
     }
 }
 
