Ajustes FrontEnd y depuración de código

--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/hys/hys.component.html
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/hys/hys.component.html
@@ -89,7 +89,7 @@
         <circle-progress
             [percent]="85"
             [radius]="100"
-            [imageSrc]="'../assets/html.png'"
+            [imageSrc]="'../assets/grupal.png'"
             [showImage]="true"
             [imageHeight]="80"
             [imageWidth]="80"
