--- a/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/aplogo/aplogo.component.css
+++ b/ProyectoIntegradorArgProg_SenecaGabriel/src/app/components/aplogo/aplogo.component.css
@@ -1,4 +1,29 @@
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.redes{
+    margin: 1em;
+}
+
 #APlogo{
     width: 200px;
     padding: 0px;
 }
+img{ 
+    width: 50px;
+    margin-right: 10px;
+}
+.btn{
+    border: medium;
+}
+/*--- para vista en el celu
+.container{
+    flex-direction: column;
+}
+.redes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}...*/
